Fixed IT translation + misc layout bugs

--- a/src/components/Creation.scss
+++ b/src/components/Creation.scss
@@ -36,6 +36,7 @@
           &.huge {
             font-size: 5rem;
             font-weight: bold;
+            line-height: 5rem;
             margin-top: 6rem;
           }
         }
