--- a/src/components/Expertises.scss
+++ b/src/components/Expertises.scss
@@ -97,7 +97,6 @@
       align-items: center;
       color: var(--white);
       display: flex;
-      font: 2rem Bodoni;
       grid-column: 1 / span 4;
       justify-content: center;
       padding: 4rem;
